--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,57 @@
-
+body{
+ margin:0px;
+}
+.menubar{
+ position:fixed;
+ width:100vw;
+ height:70px;
+ background-image:linear-gradient(45deg, black, #2a2b2d);
+ top:0px;
+ left:0px;
+ z-index:1;
+ box-shadow:0px 2px 2px 1px gray;
+}
+.menucontents{
+ width:100%;
+ height:100%;
+}
+.logoholder{
+ width:50px;
+ text-align:center;
+}
+.logo{
+ width:30px;
+ height:35px;
+}
+.cover{
+ width:45px;
+ height:45px;
+ border-radius:50%;
+ border:3px dashed gray;
+}
+.search{
+ width:300px;
+ font-family:tahoma;
+ font-weight:bold;
+ background-color:#2a2b2d;
+ border:0;
+ font-size:15px;
+ height:30px;
+ padding-left:5px;
+ border-radius:4px;
+ color:lightgray;
+}
+.options{
+  color:white;
+  font-family:tahoma;
+  font-weight:bold;
+  font-size:15px;
+  cursor:hand;
+  text-shadow:gray 2px 2px 1px;
+}
+::placeholder{
+  color:gray;
+}
+.body{
+  background-image:linear-gradient(60deg, #f2f2f2,powderblue);
+}
